[PE] Fix border of frame under frameset

FrameSetPainter paints everything in the foreground phase, so
a frame under frameset should paint its box decoration background
in the foreground phase.

Bug: 902274
Change-Id: Id56af37a478b8503f17199753a485f6fe1261c95
Reviewed-on: https://chromium-review.googlesource.com/c/1326205
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606650}
Former-commit-id: a0699cfa24f4ffa9aefe92e4e64ce43342e15f99